kubernetes/apps/base/flux-system/addons/webhooks/httproute.yaml
# Used to enable webhook-receivers https://toolkit.fluxcd.io/guides/webhook-receivers/
---
# yaml-language-server: $schema=https://kubernetes-schemas.raspbernetes.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: receiver
  namespace: flux-system
  annotations:
    external-dns.alpha.kubernetes.io/target: '${CLOUDFLARED_INGRESS_DOMAIN}'
    external-dns.alpha.kubernetes.io/external: 'true'
spec:
  parentRefs:
    - name: istio-gateway
      namespace: istio-ingress
  hostnames:
    - 'receiver.${CLUSTER_DOMAIN}'
  rules:
    - backendRefs:
        - name: webhook-receiver
          namespace: flux-system
          port: 80
