kubernetes/apps/base/flux-system/addons/webhooks/virtualservice.yaml
# Used to enable webhook-receivers https://toolkit.fluxcd.io/guides/webhook-receivers/
---
# yaml-language-server: $schema=https://kubernetes-schemas.raspbernetes.com/networking.istio.io/virtualservice_v1beta1.json
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: receiver
  namespace: flux-system
  annotations:
    external-dns.alpha.kubernetes.io/target: '${CLOUDFLARED_INGRESS_DOMAIN}'
    external-dns.alpha.kubernetes.io/external: 'true'
spec:
  hosts:
    - 'receiver.${CLUSTER_DOMAIN}'
  gateways:
    - istio-ingress/istio-ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 80
            host: webhook-receiver.flux-system.svc.cluster.local
          weight: 100
